--- a/mwe-4-undefined-fragment-id/2025-03-05-09-30/sample.tex
+++ b/mwe-4-undefined-fragment-id/2025-03-05-09-30/sample.tex
@@ -1,7 +1,8 @@
 \documentclass[]{book}
 \usepackage{makeidx,index}
 \makeindex
-
+\usepackage[hyperindex=true]{hyperref}
+\RequirePackage{listings}
 \begin{document}
 
   and 2-3-4 trees~\cite{Algorithms4th}\index{tree!2-3-4}.
